--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
+    "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sass-loader": "^8.0.3",
     "axios": "^0.26.1",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
