--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-actions": "^2.6.2",
     "@types/sass-loader": "^8.0.3",
     "axios": "^0.26.1",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-error-boundary": "^3.1.4",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "sass-loader": "^12.6.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
